--- a/rating/templates/navbar.html
+++ b/rating/templates/navbar.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<!--Navbar -->
-<nav class="mb-1 navbar navbar-expand-lg navbar-light sticky-top">
-    <a  id="icons" class=" navbar-brand" href="{% url 'index'%}" style="font-size:30px"> <strong>Awwwards</strong> </a>
-    
-    <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
-    <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="">Post
-          </a>
-        </li>
-      </ul>
+ <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+    <div class="col-sm-2 col-md-2">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="{% url 'index' %}">Awwwards</a>
+      </div>
+    </div>
+      <!-- Adding a search form  -->
       <div class="col-md-4">
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <form  action="{% url 'search_results' %}" role="search" class="form-inline  my-2 my-lg-0">
-              <input id="searchUp" class="form-control mr-sm-2" name="project" type="search" placeholder="Search" aria-label="Search">
-            </form>
-    
+
+        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search" name="project">
+            <div class="input-group-btn">
+              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
           </div>
-    
-        </div>
-      <ul class="navbar-nav ml-auto nav-flex-icons">
-            <a class="dropdown-item" href="">Profile</a>
-            <a href="">Change Password</a>
-            <a class="dropdown-item" href="">Logout</a>
+
+        </form>
+      </div>
+      <!-- search form end -->
+    <div class="col-sm-6 col-md-6 navbar-right">
+            {% if user.is_authenticated %}
+            <ul>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Profile
+                          <span class="caret"></span>
+                      </a>
+                <ul class="dropdown-menu" role="menu">
+                  <li>
+                    <a href="{% url 'index'%}">Home</a>
+                  </li>
+                  <li>
+                    <a href="/accounts/password/change">Change Password</a>
+                  </li>
+                  <li>
+                    <a href="/logout">Logout</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+            {% else %}
+            <li>
+              <a class='btn btn-default' href="/accounts/login">Login</a>
+            </li>
+
+            {% endif %}
           </div>
-        </li>
-      </ul>
+
     </div>
   </nav>
 </body>
