--- a/rating/templates/project.html
+++ b/rating/templates/project.html
@@ -1,19 +1,46 @@
-{% extends 'base.html' %}
+{% extends 'base.html'%}
 {% load bootstrap3 %}
+{% load static %}
 {% block content %}
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-      <h3 class="search text-center">Post</h3>
-      <hr>
-      <form class="" action="{% url 'post_project'%}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {% bootstrap_form form %}
-       <input type="submit" class="btn btn-success btn-lg" value="Post">
-      </form>
+    <div >
+            <div >
+                <h1 class="font-weight-bold"><strong>{{project.title}}</strong></h1>
+                <img src="{{project.image.url}}"  alt="">
+      
+                <div class="col-md-6">
+                <p class="text-center" style="padding-left: 120px; padding-right: 120px;">{{project.description}} <br> <a href="{{project.url}}" class="btn btn-success" style="margin-top: 30px;">Visit Site</a> <button class="btn btn-success" style="margin-top: 30px;" data-toggle="modal" data-target="#voteModal">Vote</button></p>
+                </div>
+                </div col-md-6>
+                <svg width="130" height="130">
+                  <circle cx="65" cy="65" r="60" fill-opacity="0" stroke="#90EE90" stroke-width="3" />
+                  <text x="50%" y="50%" text-anchor="middle" fill="white" font-size="50px" font-family="Arial" dy=".3em">{{vote_average}}</text>
+                </svg>
+                </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4"></div>
-  </div>
-</div>
+    <div class="modal" id="voteModal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Vote</h5>
+            <button type="button" class="close" data-dismiss="modal">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <form  action="{%url 'project' project.id %}" method="post" enctype="multipart/form-data">
+          <div class="modal-body">
+
+                {%csrf_token%}
+
+                {% bootstrap_form form%}
+          </div>
+          <div class="modal-footer">
+            <input type="submit" class="btn btn-success btn-lg" value="Post">
+          </div>
+          </form>
+        </div>
+      </div>
+    </div>
 {% endblock %}
