add the search template that will be rendered to display the results of the projects the user has searched

--- a/rating/templates/navbar.html
+++ b/rating/templates/navbar.html
@@ -14,7 +14,7 @@
   <ul class="navbar-nav mr-auto">
         <li class="nav-item">
 
-          <a class="nav-link" href="{%url 'new_project'%}">Post
+          <a class="nav-link" href="{%url 'post_project'%}">Post
           </a>
         </li>
       </ul>
