--- a/rating/templates/navbar.html
+++ b/rating/templates/navbar.html
@@ -21,8 +21,8 @@
   </div>
     <div class="col-md-5">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <form  action="{%url 'search'%}" role="search" class="form-inline  my-2 my-lg-0">
-          <input id="search" type="text" class="form-control input-lg" placeholder="Search Project" name="search" />
+        <form  action="{%url 'search_results'%}" role="search" class="form-inline  my-2 my-lg-0">
+          <input id="search" type="text" class="form-control input-lg" placeholder="Search Project" name="project" />
         </form>
     </div>
   </div>
